# stocks-arbitrage-bot

./: next.txt
backend/rust/: Cargo.toml  arbitrage_log.csv
backend/rust/src/: arbitrage_detector.rs  backtester.rs  data_logger.rs  exchange_api.rs  main.rs  nse_data_api.rs  options_arbitrage.rs  profit_calculator.rs  trend_tracker.rs
backend/ts/: README.md  dev.db  index.ts  package-lock.json  package.json
backend/ts/prisma/: dev.db  schema.prisma
backend/ts/src/controllers/: ai.controller.ts
backend/ts/src/db/: prisma.ts
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertForm.tsx  Controls.tsx  Header.tsx  StockDetails.tsx  StockSelector.tsx  StocksTable.tsx  Summary.tsx
frontend/components/ai/: AIChatAssistant.tsx  AIPortfolioOptimizer.tsx  AITradeAssistant.tsx
frontend/components/charts/: DrawdownChart.tsx  EquityCurveChart.tsx  PredictionChart.tsx  PriceChart.tsx  SpreadChart.tsx  TradingChart.tsx
frontend/components/dashboard/: LiveOpportunitiesTable.tsx  SignalDetailsPanel.tsx  StatsRow.tsx  WatchlistPanel.tsx
frontend/components/layout/: DashboardLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/components/modals/: AlertModal.tsx  BacktestModal.tsx  PaperTradeModal.tsx  PortfolioDashboard.tsx  PositionSimulator.tsx  PredictionModal.tsx  SentimentDashboard.tsx  StrategyBuilder.tsx
frontend/components/ui/: card.tsx
frontend/hooks/: useLocalStorage.tsx  useWebSocket.tsx
frontend/lib/: ai-client.ts  constants.ts  prediction.ts  types.ts  utils.ts
(+14 files in other folders)
