[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server", "websocket"] }
tokio-stream = "0.1"
chrono = "0.4.42"
rand = "0.9.2"
